--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,3 +1,3 @@
 rest.call.connection.timeout=10
 rest.call.read.timeout=10
-postapi.base.url=
+postapi.base.url=https://jsonplaceholder.typicode.com
